--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"gsap": "^3.12.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^5.0.1"
+		"react-fast-marquee": "^1.6.4",
+		"react-icons": "^5.0.1",
+		"swiper": "^11.0.7"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
