--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-dom": "^18.2.0",
 		"react-fast-marquee": "^1.6.4",
 		"react-icons": "^5.0.1",
+		"react-router-dom": "^6.26.1",
 		"swiper": "^11.0.7"
 	},
 	"devDependencies": {
