--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@studio-freight/lenis": "^1.0.42",
+		"framer-motion": "^11.3.31",
 		"gsap": "^3.12.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
