--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@studio-freight/lenis": "^1.0.42",
 		"framer-motion": "^11.3.31",
 		"gsap": "^3.12.5",
+		"lenis": "^1.1.13",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-fast-marquee": "^1.6.4",
