--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-fast-marquee": "^1.6.4",
 		"react-icons": "^5.0.1",
 		"react-router-dom": "^6.26.1",
-		"swiper": "^11.0.7"
+		"swiper": "^11.0.7",
+		"tailwind-merge": "^2.5.2"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
