--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@studio-freight/lenis": "^1.0.42",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.31",
 		"gsap": "^3.12.5",
 		"lenis": "^1.1.13",
+		"lucide-react": "^0.439.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-fast-marquee": "^1.6.4",
 		"react-icons": "^5.0.1",
 		"react-router-dom": "^6.26.1",
 		"swiper": "^11.0.7",
-		"tailwind-merge": "^2.5.2"
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.43",
